fix: gaps, tap color, mix color

--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -11,11 +11,13 @@
 
     nav {
         ol {
+            width: 100%;
             margin: 0px;
             list-style-type: none;
             padding-left: 0;
             display: flex;
             justify-content: center;
+            flex-wrap: wrap;
             gap: 4ch;
 
             li {
